[gd_scene load_steps=2 format=3 uid="uid://dp8eelbl0ukjb"]

[ext_resource type="Script" path="res://main.gd" id="1_sxbca"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sxbca")

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="ResultsTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -314.5
offset_top = -38.5
offset_right = 314.5
offset_bottom = 38.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 56
text = "Start mashing anytime!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Results" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -133.5
offset_top = -79.0
offset_right = 133.5
offset_bottom = 79.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="PressesLabel" type="Label" parent="Results"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 56
text = "Presses: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ResultsLabel" type="Label" parent="Results"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 56
horizontal_alignment = 1
vertical_alignment = 1
